--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,13 @@ input, button {
 }
 
 main {
-    padding: 30px 30px;
+    /* padding: 30px 0px; */
 
 }
 
 .column {
     float: left;
-    width: 45%;
+    width: 40%;
     margin: 30px 30px;
 }
 
@@ -92,6 +92,10 @@ main {
     border: 1px solid black;
     padding: 16px;
     border-radius: 10px;
+}
+
+#book_shelf {
+    float: right;
 }
 
 .book_shelf > h2 {
